--- a/source/style.css
+++ b/source/style.css
@@ -39,6 +39,11 @@ main{
     margin: 20px 0;
 }
 
+.atividade a {
+    color: var(--color-black);
+    cursor: pointer;
+}
+
 #atividadeAtual, #atividadeProx {
     font-weight: 500;
     text-decoration: underline;
@@ -97,14 +102,6 @@ tr:hover {
     margin-bottom: 50px;
 }
 
-.agua-container {
-    /* position: fixed; */
-    /* top: 130px; */
-    /* padding: 20px 30px; */
-    /* border: 1px solid var(--color-gray); */
-    border-radius: 10px;
-}
-
 .btns {
     display: flex;
     flex-direction: row;
@@ -116,6 +113,10 @@ tr:hover {
 #coposBebidos {
     margin-bottom: 30px;
     font-weight: 600;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
 }
 
 button {
