--- a/source/style.css
+++ b/source/style.css
@@ -6,6 +6,16 @@ main{
     margin: auto;
 }
 
+.saudacoes-container h3 {
+    margin-bottom: 10px;
+    font-weight: 500;
+}
+
+#diaAtual {
+    color: var(--color-gray);
+    font-weight: 400;
+}
+
 .atividade {
     font-weight: 700;
     margin: 20px 0;
@@ -16,7 +26,7 @@ main{
     cursor: pointer;
 }
 
-#atividadeAtual, #atividadeProx, #meta {
+#atividadeAtual, #atividadeProx, #meta, #anotacaoCount {
     font-weight: 500;
     text-decoration: underline;
     color: var(--color-block);
@@ -34,7 +44,7 @@ main{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    flex-wrap: wrap;
+    flex-wrap: wrap-reverse;
 }
 
 table {
@@ -153,4 +163,71 @@ input[type=number] {
     padding: 7px 12px;
     border-radius: 8px;
     text-align: center;
+}
+
+.notations {
+    padding-top: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    gap: 50px;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
+/* .notations::after {
+    content: "\f64d";
+    display: inline-block;
+    font-family: bootstrap-icons !important;
+    font-style: normal;
+    font-weight: normal !important;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    vertical-align: -.125em;
+    -webkit-font-smoothing: antialiased;
+    font-size: 1.5rem;
+    top: 50;
+} */
+
+.note {
+    min-width: 20%;
+    aspect-ratio: 1;
+    display: flex;
+    justify-content: right;
+    align-items: flex-end;
+    border: 1px solid var(--color-dirtywhite);
+    border-radius: 20px;
+    flex-wrap: wrap;
+}
+
+.note textarea {
+    width: 100%;
+    height: 100%;
+    border: none;
+    border-radius: 20px;
+    padding: 20px;
+    font-size: 1rem;
+    resize: none;
+}
+
+#add-note {
+    font-size: 1.5rem;
+    cursor:  pointer;
+}
+
+#add-note::before {
+transition: all 0.2s;
+}
+
+#add-note:hover::before {
+    transform: rotateZ(90deg);
+}
+
+#excluir {
+    font-size: 1.5rem;
+    position: absolute;
+    color: var(--color-red);
+    padding: 10px;
+    cursor: pointer;
 }
