--- a/source/style/header.css
+++ b/source/style/header.css
@@ -6,11 +6,11 @@ header {
     display: flex;
     align-items: center;
     position: fixed;
+    z-index: 1;
 }
 
 nav {
     width: 100%;
-    margin: auto;
 }
 
 nav ul {
@@ -24,4 +24,64 @@ nav ul {
 
 nav ul>li a{
     color: var(--color-lightwhite);
+}
+
+.burger-menu {
+    color: var(--color-white);
+    text-align: right;
+    display: none;
+    font-size: 1.5rem;
+    margin: 20px;
+}
+
+.disabled {
+    display: none;
+}
+
+/* responsive */
+
+@media only screen and (max-width: 767px) {
+    nav ul {
+        display: none;
+        background-color: var(--color-gray);
+    }
+    .burger-menu {
+        display: block;
+        z-index: 2;
+    }
+    .open {
+        display: flex;
+        flex-direction: column;
+        height: 100vh;
+        width: 100%;
+        justify-content: space-evenly;
+        position: absolute;
+        align-items: center;
+        top: 0;
+        animation: aparece 0.5s ease;
+        font-size: 1.25rem;
+    }
+    .open a {
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+    }
+    #menu {
+        margin-bottom: 25px;
+    }
+    .disabled {
+        display: block;
+    }
+    .hide {
+        overflow: hidden;
+    }
+
+    @keyframes aparece {
+        0%{
+            transform: translateX(500px);
+        }
+        100% {
+            transform: translateX(0px);
+        }
+    }
 }
