--- a/source/style/style.css
+++ b/source/style/style.css
@@ -211,6 +211,10 @@ input[type=number] {
     resize: none;
 }
 
+.note i {
+    position: absolute;
+}
+
 #add-note {
     font-size: 1.5rem;
     cursor:  pointer;
@@ -226,8 +230,65 @@ transition: all 0.2s;
 
 #excluir {
     font-size: 1.5rem;
-    position: absolute;
     color: var(--color-red);
     padding: 10px;
     cursor: pointer;
+}
+
+.tasks-todo {
+    margin-top: 20px;
+}
+
+.task {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.task input[type="text"] {
+    width: 90%;
+    max-width: 450px;
+    border: 1px solid var(--color-dirtywhite);
+    padding-left: 35px;
+    margin: 0;
+    font-size: 1rem;
+}
+
+.task input[type="checkbox"] {
+    width: 20px;
+    aspect-ratio: 1;
+    position: absolute;
+    margin: 10px;
+    border: var(--color-dirtywhite);
+}
+
+.task i {
+    
+}
+
+
+
+/* senha */
+.unlock {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    height: 100%;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    display: none;
+}
+
+.input-unlock {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.input-unlock input {
+    width: 300px;
+    border: 1px solid var(--color-dirtywhite);
+    margin: 0;
 }
