--- a/source/style/style.css
+++ b/source/style/style.css
@@ -6,6 +6,40 @@ main{
     margin: auto;
 }
 
+.fixed{
+    position: fixed;
+    right: 5%;
+    top: 100px;
+    width: 250px;
+    aspect-ratio: 1;
+    border-radius: 20px;
+    border: 1px solid var(--color-dirtywhite);
+    background-color: var(--color-white);
+    box-shadow: 0px 0px 10px var(--color-dirtywhite);
+    flex-wrap: wrap;
+    padding: 20px;
+}
+
+.fixed textarea {
+    /* backdrop-filter: blur(10px); */
+    width: 100%;
+    height: 100%;
+    border: none;
+    font-size: 1rem;
+    resize: none;
+    background-color: var(--color-white);
+}
+
+.fixed i {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    color: var(--color-blue);
+    border-radius: 100%;
+    cursor: pointer;
+    font-size: 1.5rem;
+}
+
 .saudacoes-container h3 {
     margin-bottom: 10px;
     font-weight: 500;
@@ -212,11 +246,12 @@ input[type=number] {
     min-width: 20%;
     aspect-ratio: 1;
     display: flex;
-    justify-content: right;
-    align-items: flex-end;
+    justify-content: space-evenly;
+    align-items: stretch;
     border: 1px solid var(--color-dirtywhite);
     border-radius: 20px;
     flex-wrap: wrap;
+    flex-direction: row-reverse;
 }
 
 .note textarea {
@@ -229,11 +264,12 @@ input[type=number] {
     resize: none;
 }
 
-.note i {
+/* .note i {
     position: absolute;
-}
+} */
 
-#add-note {
+#add-note, 
+#download-note {
     font-size: 1.5rem;
     cursor:  pointer;
 }
@@ -246,7 +282,7 @@ transition: all 0.2s;
     transform: rotateZ(90deg);
 }
 
-#excluir {
+#excluir, #pin {
     font-size: 1.5rem;
     color: var(--color-red);
     padding: 10px;
@@ -314,4 +350,9 @@ transition: all 0.2s;
     color: var(--color-lightgray);
     text-decoration: line-through;
     transition: all 0.3s;
+}
+
+#pin {
+    
+    color: var(--color-blue);   
 }
