--- a/source/style/style.css
+++ b/source/style/style.css
@@ -99,6 +99,16 @@ main{
     flex-wrap: wrap-reverse;
 }
 
+.add-row {
+    padding: 15px;
+    margin-top: 15px;
+}
+
+.add-row input[type="text"] {
+    width: 470px;
+    height: 20px;
+}
+
 table {
     border-collapse: collapse;
     margin: 20px 0;
@@ -108,6 +118,26 @@ th, td {
     border: 1px solid var(--color-dirtywhite);;
     padding: 8px;
     text-align: left;
+    vertical-align: middle;
+    text-align: center;
+}
+
+th:nth-child(2){
+    min-width: 626px;
+}
+
+td:nth-child(2) {
+    width: 550px;
+    text-align: left;
+}
+
+td:nth-child(3) {
+    display: flex;
+    gap: 10px;
+}
+
+td #excluir, td #editar {
+    padding: 0;
 }
 
 th {
@@ -169,15 +199,17 @@ button:hover {
 
 input {
     padding: 10px;
-    width: 15px;
     border-radius: 8px;
     border: none;
     margin: 0 5px;
 }
 
+.agua-container input {
+    width: 15px;
+}
+
 input[type=number]::-webkit-inner-spin-button { 
-    -webkit-appearance: none;
-    
+    -webkit-appearance: none;   
 }
 
 input[type=number] { 
@@ -282,11 +314,15 @@ transition: all 0.2s;
     transform: rotateZ(90deg);
 }
 
-#excluir, #pin {
+#excluir, #pin, #editar {
     font-size: 1.5rem;
     color: var(--color-red);
     padding: 10px;
     cursor: pointer;
+}
+
+#editar {
+    color: var(--color-blue);
 }
 
 .tasks-todo {
