--- a/source/style/style.css
+++ b/source/style/style.css
@@ -99,19 +99,32 @@ main{
     flex-wrap: wrap-reverse;
 }
 
+.cronograma-container {
+    width: 100%;
+}
+
 .add-row {
     padding: 15px;
     margin-top: 15px;
+    text-align: center;
+}
+
+.add-row input {
+    margin: 0;
 }
 
 .add-row input[type="text"] {
-    width: 470px;
+    width: 65%;
     height: 20px;
+}
+
+.table-cronos {
+    overflow-x: auto;
 }
 
 table {
     border-collapse: collapse;
-    margin: 20px 0;
+    margin: 20px 0; 
 }
 
 th, td {
@@ -122,12 +135,7 @@ th, td {
     text-align: center;
 }
 
-th:nth-child(2){
-    min-width: 626px;
-}
-
 td:nth-child(2) {
-    width: 550px;
     text-align: left;
 }
 
